...
                            { if (maxCharacters > minch) {
                                
                                maxCharacters -= incremental
                                UserDefaults.standard.set(maxCharacters, forKey: "maxCharacters")                            }}
                           
                
                ){Text("\(maxCharacters)")}.accessibilityIdentifier("MaxCountStepper")
            
        }
    }
}
struct SettingsView_Previews: PreviewProvider {
    @State static var colour = Color.yellow
...
